--- a/sass/modules/_appointment-area.scss
+++ b/sass/modules/_appointment-area.scss
@@ -2,7 +2,7 @@
     position: relative;
     background: $black;
     border-radius: 20px 20px 0px 0px;
-    padding: 20px 20px 48px 20px;
+    padding: 20px 40px 50px 40px;
     z-index: 10;
     @include xl {
         margin-top: 16px;
